--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </dependency>
   </dependencies>
   <build>
+    <sourceDirectory>src/main/java</sourceDirectory>
     <finalName>jenkins-git-integration</finalName>
   </build>
 </project>
